--- a/src/components/BupVideo.astro
+++ b/src/components/BupVideo.astro
@@ -9,7 +9,7 @@
 
     <div class="iframe-container max-w-3xl w-full">
         <iframe
-            class="bup-video aspect-video w-full rounded-lg shadow-lg"
+            class="bup-video aspect-video w-full rounded-lg shadow-lg dark:shadow-none"
             src="https://www.youtube.com/embed/yzbZ0Y61Y0w"
             title="YouTube video player"
             frameborder="0"
