--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -9,7 +9,7 @@ import Carousel from "./Carousel";
         Featured Cards
     </h2>
     <div class="carousel w-8/12 mx-auto pb-5">
-        <Carousel client:load />
+        <!-- <Carousel client:load /> -->
     </div>
     <div class="flex justify-center w-full py-2 gap-2">
         <a href="#item1" class="btn btn-xs">1</a>
