--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
-<footer class="mt-[150px] pt-6 flex flex-col gap-y-5 items-center pb-3 justify-center shadow-lg">
+<footer class="mt-[150px] pt-6 flex flex-col gap-y-5 items-center pb-3 justify-center shadow-lg dark:shadow-none">
    
     <!-- Links -->
-    <div class="flex flex-col md:flex-row items-center gap-x-5 gap-y-2 font-nunito text-sm text-slate-500 md:text-base ">
+    <div class="flex flex-col md:flex-row items-center gap-x-5 gap-y-2 font-nunito text-sm  dark:text-slate-200 md:text-sm ">
         <a  href="https://www.bup.bio/buptuts" target="_blank" rel="noreferrer">BŪP TŪTs</a>
         <a  href="https://www.bup.bio/page/terms-of-service" target="_blank" rel="noreferrer">Terms of Service</a>
         <a  href="https://www.bup.bio/page/privacy-policy" target="_blank" rel="noreferrer">Privacy Policy</a>
@@ -34,10 +34,10 @@
 
             <input type="checkbox" id="my-modal" class="modal-toggle" />
 
-            <div class="modal">
+            <div class="modal dark:text-black">
                 <div class="modal-box">
                     <h3 class="font-bold text-lg text-center">What would you like to ask us about?</h3>
-                    <div class="flex flex-col gap-y-5 items-center pt-10">
+                    <div class="flex flex-col gap-y-5 items-center pt-10 ">
                         <a href="mailto: hello@bup.bio">General - hello@bup.bio</a>
                         <a href="mailto: design@bup.bio">Design - design@bup.bio</a>
                         <a href="mailto: enterprise@bup.bio">Enterprise - enterprise@bup.bio</a>
