--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -74,7 +74,7 @@
         >
             <a
                 href="/"
-                class="register-btn text-white w-40 p-3 text-base text-center border-none rounded-2xl shadow-lg cursor-pointer"
+                class="register-btn text-white w-40 p-3 text-base text-center border-none rounded-2xl shadow-lg cursor-pointer dark:shadow-none"
                 >Register
             </a>
 
@@ -82,7 +82,7 @@
                 href="/"
                 target="_blank"
                 rel="noopener"
-                class="login-btn text-white w-40 p-3 text-base text-center border-none rounded-2xl shadow-lg cursor-pointer"
+                class="login-btn text-white w-40 p-3 text-base text-center border-none rounded-2xl shadow-lg cursor-pointer dark:shadow-none"
                 >Login
             </a>
         </div>
