--- a/src/components/MissionStatement.astro
+++ b/src/components/MissionStatement.astro
@@ -18,9 +18,7 @@
             Our Mission
         </h2>
 
-        <p
-            class="mission-text font-nunito text-paragraph pt-2 leading-loose text-center"
-        >
+        <p class="mission-text font-nunito pt-2 leading-loose text-center">
             "We believe people should be able to network in a post-pandemic
             society. We also believe people should be able to conserve while
             networking. That’s why we created the last business card you’ll ever
