--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ import Testing from "../components/testing.astro";
     <Features />
     <Pricing client:load />
 
-    <FAQ client:visible />
+    <FAQ client:load />
     <Footer />
 </Layout>
 <style is:global>
