--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,7 +2,10 @@
 import NavLinks from "./NavLinks";
 ---
 
-<div id="stylingWrapper" class="w-full mb-5 p-4 fixed top-0 z-40 bg-white">
+<div
+  id="stylingWrapper"
+  class="w-full mb-5 p-4 fixed top-0 z-40 bg-white dark:bg-black dark:text-white"
+>
   <nav
     class="flex justify-between items-center w-full max-w-section mx-auto font-nunito"
   >
