--- a/src/components/testing.astro
+++ b/src/components/testing.astro
@@ -1,28 +1,46 @@
 ---
 ---
 
-<div class="relative flex w-screen">
-    <div class="absolute flex gap-x-10 brands">
-        <img class="w-20" src="/assets/brandImages/bwim-logo.webp" />
-        <img class="w-20" src="/assets/brandImages/ut-logo.webp" />
-        <img class="w-20" src="/assets/brandImages/century-21-be3-logo.webp" />
-        <img class="w-20" src="/assets/brandImages/century-21-be3.webp" />
-        <img class="w-20" src="/assets/brandImages/dwntwn-social.webp" />
+<div
+    class="relative flex w-screen justify-center py-20 pb-40 dark:bg-slate-100"
+>
+    <h2
+        class="text-section-h2 text-transparent bg-clip-text bg-gradient-to-br from-[#13bc6a] to-[#1a9dd0] font-medium"
+    >
+        Brands that use BŪP
+    </h2>
+    <div id="wrapper" class="absolute flex gap-x-10 brands mt-28 py-2 px-3">
         <img
-            class="w-20"
+            class="w-20 drop-shadow-xl"
+            src="/assets/brandImages/bwim-logo.webp"
+        />
+        <img class="w-20 drop-shadow-xl" src="/assets/brandImages/ut-logo.webp"
+        />
+        <img
+            class="w-20 drop-shadow-xl"
+            src="/assets/brandImages/century-21-be3-logo.webp"
+        />
+        <img
+            class="w-20 drop-shadow-xl"
+            src="/assets/brandImages/century-21-be3.webp"
+        />
+        <img
+            class="w-20 drop-shadow-xl"
+            src="/assets/brandImages/dwntwn-social.webp"
+        />
+        <img
+            class="w-20 drop-shadow-xl"
             src="/assets/brandImages/the-switzer-hych-group-logo.webp"
         />
         <img class="w-20" src="/assets/brandImages/charrismusic.png" />
     </div>
-
-    <!-- <img class="" src="/assets/brandImages/bwim-logo.webp" /> -->
 
     <style>
         .brands {
             position: absolute;
             overflow: hidden;
             height: 100px;
-            animation: move 40s linear infinite;
+            animation: move 80s linear infinite;
             left: 100%;
         }
 
@@ -32,10 +50,10 @@
 
         @-webkit-keyframes move {
             from {
-                left: -50%;
+                left: 100%;
             }
             to {
-                left: 100%;
+                left: -60%;
             }
         }
     </style>
