--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,91 +4,88 @@ export interface Props {
 }
 
 const { title } = Astro.props as Props;
+import ThemeSwitcher from "../components/ThemeSwitcher.astro";
 ---
 
-<!DOCTYPE html>
-<html lang="en" data-theme="light">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
-			integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
-			crossorigin="anonymous"
-			referrerPolicy="no-referrer"
-		/>
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width" />
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+<link
+	rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+	integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+	crossorigin="anonymous"
+	referrerPolicy="no-referrer"
+/>
+<meta name="generator" content={Astro.generator} />
+<title>{title}</title>
 
-		<!-- Messenger Chat Plugin Code -->
-		<div id="fb-root"></div>
+<body class="text-slate-800 dark:bg-black dark:text-slate-200">
+	<slot />
+	<ThemeSwitcher />
+	<!-- Messenger Chat Plugin Code -->
+	<div id="fb-root"></div>
 
-		<!-- Your Chat Plugin code -->
-		<div id="fb-customer-chat" class="fb-customerchat"></div>
+	<!-- Your Chat Plugin code -->
+	<div id="fb-customer-chat" class="fb-customerchat"></div>
 
-		<script is:inline>
-			var chatbox = document.getElementById("fb-customer-chat");
-			chatbox.setAttribute("page_id", "100166648933195");
-			chatbox.setAttribute("attribution", "biz_inbox");
-		</script>
+	<script is:inline>
+		var chatbox = document.getElementById("fb-customer-chat");
+		chatbox.setAttribute("page_id", "100166648933195");
+		chatbox.setAttribute("attribution", "biz_inbox");
+	</script>
 
-		<!-- Your SDK code -->
-		<script is:inline>
-			window.fbAsyncInit = function () {
-				FB.init({
-					xfbml: true,
-					version: "v14.0",
-				});
-			};
+	<!-- Your SDK code -->
+	<script is:inline>
+		window.fbAsyncInit = function () {
+			FB.init({
+				xfbml: true,
+				version: "v14.0",
+			});
+		};
 
-			(function (d, s, id) {
-				var js,
-					fjs = d.getElementsByTagName(s)[0];
-				if (d.getElementById(id)) return;
-				js = d.createElement(s);
-				js.id = id;
-				js.src =
-					"https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
-				fjs.parentNode.insertBefore(js, fjs);
-			})(document, "script", "facebook-jssdk");
-		</script>
+		(function (d, s, id) {
+			var js,
+				fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s);
+			js.id = id;
+			js.src =
+				"https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+			fjs.parentNode.insertBefore(js, fjs);
+		})(document, "script", "facebook-jssdk");
+	</script>
 
-		<style>
-			@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-			@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap");
-			@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500&display=swap");
-			:root {
-				--font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-				--font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
-				--font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
+	<style>
+		@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+		@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap");
+		@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500&display=swap");
+		:root {
+			--font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
+			--font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
+			--font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
 
-				--color-text: hsl(12, 5%, 4%);
-				--color-border: hsl(17, 24%, 90%);
-			}
+			--color-text: hsl(12, 5%, 4%);
+			--color-border: hsl(17, 24%, 90%);
+		}
 
-			html {
-				font-family: "Quicksand", system-ui, -apple-system,
-					BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
-					Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-				font-size: var(--font-size-base);
-				color: var(--color-text);
-				background-color: var(--color-bg);
-				overflow-x: hidden;
-				scroll-behavior: smooth;
-			}
+		html {
+			font-family: "Quicksand", system-ui, -apple-system,
+				BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+				Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+			font-size: var(--font-size-base);
+			color: var(--color-text);
+			background-color: var(--color-bg);
+			overflow-x: hidden;
+			scroll-behavior: smooth;
+		}
 
-			body {
-				margin: 0px;
-				padding: 0px;
-				box-sizing: border-box;
-				overflow-x: hidden;
-				position: relative;
-			}
-		</style>
-	</body>
-</html>
+		body {
+			margin: 0px;
+			padding: 0px;
+			box-sizing: border-box;
+			overflow-x: hidden;
+			position: relative;
+		}
+	</style>
+</body>
